allow-n1-a-to-n2-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-n1-a-to-n2-b
  namespace: stackrox
spec:
  podSelector:
    matchLabels:
      app: sensor
  policyTypes:
  - Ingress
  ingress:
  - from:
    -  namespaceSelector:
        matchLabels:
          foo: bar
       podSelector:
        matchLabels:
          app: server
